# openautory

./: .env.example  CLAUDE.md  package.json  task_plan.md  tsconfig.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.module.css  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Chat.module.css  Chat.tsx  CollapsiblePanel.module.css  CollapsiblePanel.tsx  LogPanel.module.css  LogPanel.tsx  ProjectSettings.module.css  ProjectSettings.tsx  Settings.module.css  Settings.tsx  Sidebar.module.css  Sidebar.tsx
apps/desktop/src/hooks/: useWebSocket.ts
apps/desktop/src/hooks/__tests__/: useWebSocket.test.ts
apps/server/: package.json
apps/server/src/: config.ts  index.ts
apps/server/src/mcp/: index.ts  messaging.ts
docs/: DEBUG.md  SESSION.md  SESSION_TITLE.md
scripts/: build.ts  clean.ts
spec/: architecture.md
