[package]
name = "openautory-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
tokio = { version = "1", features = ["signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
